--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,5 @@
-Jhoan David Vargas Velandia <4523@holbertonschool.com>
-Mateo Villada Higuita <4545@holbertonschool.com>
+# This file lists all individuals having contributed content to the repository.
+# For how it is generated, see `hack/generate-authors.sh`.
+
+David-vargasV <4523@holbertonschool.com>
+TeoVH <4545@holbertonschool.com>
